# whatsapp-2

./: pyproject.toml
Os Show de Bola/: pyproject.toml
Os Show de Bola/os show de bola/: app.py
Os Show de Bola/os show de bola/templates/: index.html  logado.html
Os Show de Bola/os-show-de-bola/: app.py
Os Show de Bola/os-show-de-bola/entities/: User.py
Os Show de Bola/os-show-de-bola/forms/: LoginForm.py  LogoutButton.py
Os Show de Bola/os-show-de-bola/templates/: base.html  chat.html  logado.html
Os Show de Bola/whatsapp-2/entities/: User.py
Os Show de Bola/whatsapp-2/forms/: AddContactForm.py  SendMessageForm.py
Os Show de Bola/whatsapp-2/templates/: home.html  login.html
whatsapp-2/: app.py
whatsapp-2/entities/: Message.py  User.py
whatsapp-2/forms/: AccountForm.py  AddContactForm.py  LoginForm.py  LogoutButton.py  SendMessageForm.py
whatsapp-2/static/: styles.css
whatsapp-2/templates/: base.html  chat.html  home.html  login.html  register.html
